fixed: footer overflow on narrow screens

--- a/source/less/components/fin.less
+++ b/source/less/components/fin.less
@@ -1,6 +1,7 @@
-svg.fin {
+.fin {
   .container;
   margin-top: var(--space-s);
+  
   .segment-1 {
     transform: scaleX(200%);
   }
